# Specify our source files
set(TextureFormatConversion_SOURCES
    "TextureFormatConversion.cpp"
)
set(TextureFormatConversion_HEADERS
    "TextureFormatConversion.pkg"
    "TextureFormatConversion.h"
    "ImageConversion.h"
    "ImageConversion.inl"
    "ImageConversionTypes.h"
)

# Define our project targets
add_library(TextureFormatConversion SHARED ${TextureFormatConversion_SOURCES} ${TextureFormatConversion_HEADERS} ${COBALT_VERSION_FILES})
add_library(Cobalt::TextureFormatConversion ALIAS TextureFormatConversion)
register_clang_format_and_tidy_target(TextureFormatConversion)
cobalt_apply_compiler_warning_settings(TextureFormatConversion)
target_include_directories(TextureFormatConversion PUBLIC ${COBALT_INTERNAL_INCLUDE_DIR})

# Set custom compilation/linker settings
target_compile_definitions(TextureFormatConversion PRIVATE BUILDING_TEXTURE_FORMAT_CONVERSION_DLL=1)
target_compile_options(TextureFormatConversion PRIVATE $<$<CXX_COMPILER_ID:MSVC>:/bigobj>)

# Specify our project dependencies
target_link_libraries(TextureFormatConversion
    PUBLIC
        Cobalt::RendererInterface
        half
)

# Transfer required files to their output locations
cobalt_configure_sdk_install(TextureFormatConversion OMIT_LIB)

# Define our virtual project folder and file structure
set_target_properties(TextureFormatConversion PROPERTIES FOLDER "Libraries/Private")
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${TextureFormatConversion_SOURCES} ${TextureFormatConversion_HEADERS})
make_paths_relative(COBALT_VERSION_FILES_RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${COBALT_VERSION_FILES})
source_group("Autogenerated" FILES ${COBALT_VERSION_FILES_RELATIVE})
source_group("ImageConversion" FILES
    "ImageConversion.h"
    "ImageConversionTypes.h"
    "ImageConversion.inl"
)
